tests/ui/generic-associated-types/issue-84931.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/issue-84931.rs:14:21
   |
LL |     type Item<'a> = &'a mut T;
   |               --    ^^^^^^^^^ ...so that the reference type `&'a mut T` does not outlive the data it points at
   |               |
   |               the parameter type `T` must be valid for the lifetime `'a` as defined here...
   |
help: consider adding an explicit lifetime bound
   |
LL |     type Item<'a> = &'a mut T where T: 'a;
   |                               +++++++++++

error[E0478]: lifetime bound not satisfied
  --> $DIR/issue-84931.rs:14:21
   |
LL |     type Item<'a> = &'a mut T;
   |                     ^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'b` as defined here
  --> $DIR/issue-84931.rs:13:6
   |
LL | impl<'b, T: 'b> StreamingIter for StreamingSliceIter<'b, T> {
   |      ^^
note: but lifetime parameter must outlive the lifetime `'a` as defined here
  --> $DIR/issue-84931.rs:14:15
   |
LL |     type Item<'a> = &'a mut T;
   |               ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0309, E0478.
For more information about an error, try `rustc --explain E0309`.
